# se-toolkit-lab-7

./: README.md
bot/: Dockerfile  PLAN.md  config.py  pyproject.toml
bot/handlers/: __init__.py
bot/handlers/commands/: __init__.py  commands.py
bot/services/: __init__.py  intent_router.py  keyboard.py  llm_client.py  lms_client.py  tools.py
