[project]
name = "se-toolkit-lab-7-bot"
version = "0.1.0"
description = "Telegram bot for Learning Management System"
requires-python = ">=3.14"
dependencies = ["aiogram>=3.18.0", "httpx>=0.28.1", "python-dotenv>=1.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
